--- a/css/Observer_event.css
+++ b/css/Observer_event.css
@@ -1,4 +1,4 @@
-table.syslogTable {
+table.eventTable {
     border-collapse: collapse;
     text-align: left;
     line-height: 1.3;
@@ -6,16 +6,16 @@ table.syslogTable {
     margin: 20px 10px;
 }
 
-table.syslogTable thead th {
+table.eventTable thead th {
     padding: 5px;
     font-weight: bold;
     border-top: 1px solid #ccc;
     border-right: 1px solid #ccc;
-    border-bottom: 2px solid rgb(0, 0, 255);
+    border-bottom: 2px solid #c00;
     background: #dcdcd1;
 }
-table.syslogTable tbody th {
-    width: 150px;
+table.eventTable tbody th {
+    width: 100px;
     padding: 3px;
     font-weight: bold;
     vertical-align: top;
@@ -23,7 +23,7 @@ table.syslogTable tbody th {
     border-bottom: 1px solid #ccc;
     background: #ececec;
 }
-table.syslogTable td {
+table.eventTable td {
     width: 3000px;
     padding: 5px;
     vertical-align: top;
