--- a/css/Observer_home.css
+++ b/css/Observer_home.css
@@ -6,8 +6,11 @@
     width:50%;
     height:50%;
     background-color: rgb(255, 255, 255);
+    float: left;
 }
 #home_div_logcount{
     width:50%;
     height:50%;
+    background-color: rgb(255, 255, 255);
+    float: left;
 }
