--- a/css/Observer_tags.css
+++ b/css/Observer_tags.css
@@ -16,3 +16,7 @@ td{
     color:#fff;
     background: #909090;
 }
+
+input[type=button]{color: #fff; text-align: center; background-color: #7e8c8d; border-color: #7e8c8d;}
+input[type=button]:hover{color: #fff; text-align: center; background-color:#6a7879;}
+input[type=button]:active{color: #fff; text-align: center; top: 3px; outline: none; -webkit-box-shadow: none; box-shadow: none;}
