--- a/css/Observer_user_Manage.css
+++ b/css/Observer_user_Manage.css
@@ -1,6 +1,6 @@
 body, html {
     height: 100%;
-    background: #666666;
+    background: #fff;
 	font-family: Ubuntu-Regular, sans-serif;
 }
 table{
