--- a/css/Observer_user_Manage.css
+++ b/css/Observer_user_Manage.css
@@ -10,6 +10,7 @@ table{
 }
 tr{
     color:#fff;
+    height: 20px;
 }
 th{
     width:20%;
@@ -17,6 +18,7 @@ th{
 }
 td{
     width:16%;
+    
     text-align: center;
     color:#fff;
     background: #909090;
