--- a/css/Observer_tags.css
+++ b/css/Observer_tags.css
@@ -1,25 +1,19 @@
 table{
+    border: 2px solid #000;
+    border-collapse: collapse;
     background: #464545;
-    border:2;
     align-items:center;
-    margin: auto;
 }
 tr{
     color:#fff;
 }
 th{
-    width:10%;
     color:#fff;
-    border-left: 1px solid #fff;
-    border-right: 1px solid #fff;
 }
 td{
-    width:15%;
     text-align: center;
-    color:#fff;
-    background: #909090;
-    border-left: 1px solid #fff;
-    border-right: 1px solid #fff;
+    color:#474747;
+    background: #fff;
     font-family: 'Courier New', Courier, monospace;
 }
 
