--- a/css/Observer_home.css
+++ b/css/Observer_home.css
@@ -1,27 +1,41 @@
+:root{
+    --chart-width:50%;
+}
 #home_div_root{
     width:100%;
 }
 #home_div_info{
-    width:50%;
-    height:50%;
+    width:var(--chart-width);
+    height: 50%;
     background-color: rgb(192, 192, 192);
     float: left;
+    position: relative;
 }
 #home_div_resource{
-    width:50%;
-    height:50%;
-    background-color: rgb(255, 255, 255);
+    width:var(--chart-width);
+    height: 50%;
     float: right;
+    position: relative;
 }
 #home_div_logcount{
-    width:50%;
-    height:50%;
-    background-color: rgb(255, 255, 255);
+    width:var(--chart-width);
+    height: 50%;
     float: left;
+    position: relative;
 }
 #home_div_logcount_hour{
-    width:50%;
-    height:50%;
-    background-color: rgb(255, 255, 255);
+    width:var(--chart-width);
+    height: 50%;
     float: right;
+    position: relative;
+}
+.center {
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+canvas{
+    width:500px;
 }
