--- a/css/Observer_eventHeader.css
+++ b/css/Observer_eventHeader.css
@@ -42,6 +42,9 @@ input[type="date"]::-webkit-inner-spin-button,input[type="date"]::-webkit-clear-
     display: none;
     -webkit-appearance: none;
 }
+input[type="date"] {
+    width:100px;
+}
 input[type="number"] {
     width:35px;
 }
@@ -52,20 +55,18 @@ input[type=button]{
     border-color: #7e8c8d;
     width:40px;
     height:25px;
-    text-align: center;
-    padding-bottom: 15px;
 }
 input[type=button]:hover{
     color: #fff; 
-    text-align: center; 
     background-color:#6a7879;
 }
 td{
     font-family: "menu_font";
     font-size:20px;
+    width: 1px;
+    white-space: nowrap;
 }
 table{
-    width:100%;
     height:35px;
 }
 select{
