--- a/css/Observer_div.css
+++ b/css/Observer_div.css
@@ -28,7 +28,7 @@
     width:100%;
     height: var(--head-height);
     display: grid;
-    grid-template-columns: 1fr 4fr 0.7fr 1fr;
+    grid-template-columns: 1fr 5fr 1fr;
 }
 
 #div_banner{
