--- a/css/Observer_alert.css
+++ b/css/Observer_alert.css
@@ -12,6 +12,7 @@
     -webkit-box-shadow: 0 0 5px black;
     -moz-box-shadow:    0 0 5px black;
     box-shadow:         0 0 5px black;
+    color: white;
 }
 #Low {
     position: relative;
@@ -27,6 +28,7 @@
     -webkit-box-shadow: 0 0 5px black;
     -moz-box-shadow:    0 0 5px black;
     box-shadow:         0 0 5px black;
+    color: black;
 }
 #Medium {
     position: relative;
@@ -42,6 +44,7 @@
     -webkit-box-shadow: 0 0 5px black;
     -moz-box-shadow:    0 0 5px black;
     box-shadow:         0 0 5px black;
+    color: white;
 }
 #High {
     position: relative;
@@ -57,6 +60,7 @@
     -webkit-box-shadow: 0 0 5px black;
     -moz-box-shadow:    0 0 5px black;
     box-shadow:         0 0 5px black;
+    color: white;
 }
 #Critical {
     position: relative;
@@ -72,17 +76,41 @@
     -webkit-box-shadow: 0 0 5px black;
     -moz-box-shadow:    0 0 5px black;
     box-shadow:         0 0 5px black;
+    color: white;
 }
 td, th, table {
     font-size: 20px;
     font-weight: bold;
-    color: #fff;
     border: none;
     border-spacing: 0,0;
     padding:-10,-10,0,0; 
     margin:0,0,0,0;
     border-collapse: collapse;
 }
+
+.css-cancely {
+    display: inline-block;
+    position: relative;
+    margin: 0 20px 0 7px;
+    padding: 0;
+    width: 4px;
+    height: 20px;
+    background: black;
+    transform: rotate(45deg);
+}
+.css-cancely:before {
+    display: block;
+    content: "";
+    position: absolute;
+    float: center;
+    top: 50%;
+    left: -8px;
+    width: 20px;
+    height: 4px;
+    margin-top: -2px;
+    background: black;
+}
+
 .css-cancel {
     display: inline-block;
     position: relative;
@@ -90,7 +118,7 @@ td, th, table {
     padding: 0;
     width: 4px;
     height: 20px;
-    background: #fff;
+    background: white;
     transform: rotate(45deg);
 }
 .css-cancel:before {
@@ -103,5 +131,5 @@ td, th, table {
     width: 20px;
     height: 4px;
     margin-top: -2px;
-    background: #fff;
+    background: white;
 }
